# rustwallet

./: BITCOIN_SOLANA_IMPLEMENTATION.md  BSC_INTEGRATION_SUMMARY.md  CHAINTYPE_REFACTORING.md  CLAUDE.md  CLEAN_ARCHITECTURE_CQRS_COMPLETE.md  Cargo.toml  HANDLER_UPDATES.md  MULTI_CHAIN_SERVICE.md  QUERY_HANDLER_PATTERNS.md  QUICK_TEST_GUIDE.md  README.md  READMEbk.md  TESTING.md  TRANSFER_FEATURE_DESIGN.md  TRANSFER_IMPLEMENTATION_COMPLETE.md  TRANSFER_TEST_SUMMARY.md
design/: design.md  design2.md  task.md
src/: lib.rs  main.rs
src/adapter/: mod.rs
src/adapter/infrastructure/blockchain/: alloy_service.rs  bitcoin_service.rs  mod.rs  multi_chain_service.rs  solana_service.rs
src/adapter/interfaces/cli/: mod.rs
src/application/: mod.rs
src/application/handlers/: get_balance_handler.rs  mod.rs
src/core/application/handlers/: get_balance_handler.rs  mod.rs  transfer_handler.rs
src/core/domain/: mod.rs
src/core/domain/commands/: mod.rs
src/core/domain/errors/: mod.rs
src/core/domain/queries/: mod.rs
src/core/domain/services/: mod.rs
src/core/domain/value_objects/: address.rs  (+6 more)
src/domain/: mod.rs
src/domain/queries/: mod.rs
src/domain/services/: mod.rs
src/domain/value_objects/: address.rs  network.rs
src/infrastructure/: mod.rs
src/infrastructure/blockchain/: alloy_service.rs  mod.rs
src/interfaces/cli/: mod.rs
tests/: BSC_TESTING.md  README.md  balance_query_integration_test.rs  bitcoin_solana_integration_test.rs  bsc_balance_integration_test.rs  multi_chain_service_test.rs  transfer_execution_test.rs  transfer_integration_test.rs
